5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1630_2920.log
== TEST (2019-04-02 16:12:31) 
-- CODE:
comida = float(input("gramas :"))
s2= int(input("suco:"))
sobremessa = int(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:58) 
-- CODE:
comida = float(input("gramas :"))
s2= int(input("suco:"))
sobremessa = int(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.18814
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:23) 
-- CODE:
comida = float(input("gramas :"))
s2= int(input("suco:"))
sobremessa = int(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:57) 
-- CODE:
comida = float(input("gramas :"))
q.suco= int(input("suco:"))
sobremessa = int(input("sb:"))
 
prato = 26.90*comida
q.suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.174341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 2, in <module>
    q.suco= int(input())
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:05) 
-- CODE:
comida = float(input("gramas :"))
q.suco= int(input("suco:"))
sobremessa = int(input("sb:"))
 
prato = 26.90*comida
q.suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.12641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 2, in <module>
    q.suco= int(input())
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:25) 
-- CODE:
comida = float(input("gramas :"))
q.suco= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
q.suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.208021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 2, in <module>
    q.suco= float(input())
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:28) 
-- CODE:
comida = float(input("gramas :"))
q.suco= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
q.suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q.suco= float(input())
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:42) 
-- CODE:
comida = float(input("gramas :"))
q.suco= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
q.suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q.suco= float(input())
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:57) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.287498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 6, in <module>
    suco = 3.50*s2
NameError: name 's2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:58) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s2
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    suco = 3.50*s2
NameError: name 's2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:17) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:29) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.267384
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:46) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.190302
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:48) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.167013
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.628
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:48) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.176094
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
6079.440999999999
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.628
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
10468.407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:48) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.196268
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:29) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = (26.90)*comida
suco = (3.50)*s
sb = (3.00)*sobremessa

total =  prato + suco + sb 
print(total)

-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:40) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = (26.90)*comida
suco = (3.50)*s
sb = (3.00)*sobremessa

total =  prato + suco + sb 
print(total)

-- EXECUTION TIME:
0.142101
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:18:56) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = (26.90)*comida
suco = (3.50)*s
sb = (3.00)*sobremessa

total =  prato + suco + sb 
print(round(total,2))

-- EXECUTION TIME:
0.119649
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:18:57) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = (26.90)*comida
suco = (3.50)*s
sb = (3.00)*sobremessa

total =  prato + suco + sb 
print(round(total,2))

-- EXECUTION TIME:
0.130435
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:36) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total =  prato + suco + sb 
print(round(total,2))

-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:23) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90
suco = 3.50
sb = 3.00

total =  prato*comida + suco*s + sb*sobremessa 
print(round(total,2))

-- EXECUTION TIME:
0.151089
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:24) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))
 
prato = 26.90
suco = 3.50
sb = 3.00

total =  prato*comida + suco*s + sb*sobremessa 
print(round(total,2))

-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:12) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.143115
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
36.52
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
75.65
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
125.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:14) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.217745
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
36.52
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
75.65
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
36.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:14) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.175121
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
75.65
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
36.52
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
36.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:14) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.300552
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
36.52
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
36.52
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
75.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:14) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.350115
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
36.52
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
75.65
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:14) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com= 1000/comida * 26.90
suco = 3.50
sb = 3.00

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.215179
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1630/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:34) 
-- CODE:
comida = float(input("gramas :"))
s= int(input("suco:"))
sobremessa = float(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.204119
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:24) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.216061
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:27) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.148797
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.63
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
24105.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:28) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.135384
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.63
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
10468.41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:28) 
-- CODE:
comida = float(input("gramas :"))
s= float(input("suco:"))
sobremessa = float(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.235932
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1630/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:44) 
-- CODE:
comida = int(input("gramas :"))
s= int(input("suco:"))
sobremessa = int(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    comida = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:46) 
-- CODE:
comida = int(input("gramas :"))
s= int(input("suco:"))
sobremessa = int(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.146189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 1, in <module>
    comida = int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:47) 
-- CODE:
comida = int(input("gramas :"))
s= int(input("suco:"))
sobremessa = int(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.120986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 1, in <module>
    comida = int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:26:47) 
-- CODE:
comida = int(input("gramas :"))
s= int(input("suco:"))
sobremessa = int(input("sb:"))

com = 26.90*comida
suco = 3.50*s
sb = 3.00*sobremessa

total = com + suco + sb
print(round(total,2))

-- EXECUTION TIME:
0.152237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2920/main.py", line 1, in <module>
    comida = int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:32) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
 

print(sel)
-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:35:12) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
total= sel*prato + s*suco +  sob*sobremessa
-- EXECUTION TIME:
0.197015
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:35:24) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.151131
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
648441.3931999999
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
281509.4983
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
163459.26289999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:26) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- OUTPUT:
648441.3931999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:35:26) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.181234
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
648441.3931999999
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
648441.3931999999
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
sel:sel:sob:281509.4983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:35:26) 
-- CODE:
prato = 26.90 
suco = 3.50
sobremessa = 3.00
sel = float(input("sel:"))* prato
s = int(input("sel:"))
sob = int(input("sob:"))
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.123049
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
648441.3931999999
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
sel:sel:sob:281509.4983
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
sel:sel:sob:163459.26289999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:36:54) 
-- CODE:
sel = float(input("sel:"))
s = float(input("sel:"))
sob = float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa=3.00
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.207233
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:25) 
-- CODE:
sel = float(input("sel:"))
s = float(input("sel:"))
sob = float(input("sob:"))
1000sel= 26.90
suco=3.50
sobremessa=3.00
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.178997
-- ERROR:
  File "/home/codebench/codes/1630/2920/main.py", line 4
    1000sel= 26.90
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:41) 
-- CODE:
sel = float(input("sel:"))
s = float(input("sel:"))
sob = float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa=3.00
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.146084
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:42) 
-- CODE:
sel = float(input("sel:"))
s = float(input("sel:"))
sob = float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa=3.00
total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:39:22) 
-- CODE:
prato= 26.90
suco=3.50
sobremessa= 3.00
sel = float(input("sel:"))
s = float(input("sel:"))
sob = float(input("sob:"))

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.230868
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:20) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.181174
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
sel:s:sob:10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
sel:s:sob:6079.440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:21) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.138596
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.407
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
24105.628
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:22) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.185306
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.628
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
24105.628
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:22) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.155327
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
24105.628
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
10468.407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:22) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- EXECUTION TIME:
0.189569
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1630/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:16) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(total)
-- OUTPUT:
24105.628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:59) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(round(total,2))
-- EXECUTION TIME:
0.172033
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:00) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))
prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato + s*suco +  sob*sobremessa
print(round(total,2))
-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:58) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))

prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato/1000 + s*suco +  sob*sobremessa
print(round(total,2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:48:08) 
-- CODE:
sel = float(input("sel:"))
s = float(input("s:"))
sob= float(input("sob:"))

prato= 26.90
suco=3.50
sobremessa= 3.00

total= sel*prato/1000 + s*suco +  sob*sobremessa
print(round(total,2))
-- EXECUTION TIME:
0.148663
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
